correction bug detailhydromel

--- a/src/app/detailhydromel/detailhydromel.component.html
+++ b/src/app/detailhydromel/detailhydromel.component.html
@@ -1,7 +1,7 @@
 <h1>Hydromel 1</h1>
 <div>
 <p>
-  <label>Nom de l'hydromel</label><br>
+  <label>Nom de l'hydromel : {{find(1).nom}}</label><br>
   <label>Type d'hydromel</label><br>
   <label> Type de miel</label><br>
   <label>Volume</label><br>
