--- a/src/app/connexion/connexion.component.css
+++ b/src/app/connexion/connexion.component.css
@@ -1,10 +1,12 @@
 .login-container{
-  margin-top: 5%;
-  margin-bottom: 5%;
+  text-align: center;
+  align:center;
 }
 .login-form-1{
   padding: 5%;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  align:center;
 }
 .login-form-1 h3{
   text-align: center;
