--- a/src/app/fournisseur-produits/fournisseur-produits.component.html
+++ b/src/app/fournisseur-produits/fournisseur-produits.component.html
@@ -62,7 +62,7 @@
     </div>
     <div class="form-group">
       <label for="qte">Quantité:</label>
-      <input type="number" class="form-control" id="qte" name="qte" #qte="ngModel" [(ngModel)]="produitForm.qte" required>
+      <input type="number" min = "0" class="form-control" id="qte" name="qte" #qte="ngModel" [(ngModel)]="produitForm.qte" required>
       <div *ngIf="qte.invalid && (qte.dirty || qte.touched)" class="text-danger bg-light form-control-sm">
         <div *ngIf="qte.errors.required">
           La quantité du produit est obligatoire.
