Menu et facturation

--- a/src/app/facturation/facturation.component.html
+++ b/src/app/facturation/facturation.component.html
@@ -1,12 +1,13 @@
+
 <h1>Facture</h1>
 <p></p>
-<p>Date : <br>
-Référence : </p>
+<p>Date : {{facture?.date}}<br>
+Référence : {{facture?.ref}}</p>
 <p></p>
 <div class="row">
   <div class="col-6">
   <h4>Adresse facturation</h4>
-    <p>Nom Prénom <br>
+    <p> Nom Prénom<br>
       Rue <br>
       Code postal Ville <br>
       Pays <br> <br> <br></p>
@@ -14,10 +15,10 @@ Référence : </p>
 
 <div class="col-6">
   <h4>Adresse société</h4>
-  <p>Nom Prénom <br>
-     Rue <br>
-     Code postal Ville <br>
-     Pays <br> <br> <br></p>
+  <p>{{admin?.nom}} {{admin?.prenom}} <br>
+     {{admin?.rue}} <br>
+     {{admin?.codePostal}} {{admin?.ville}} <br>
+     {{admin?.pays}} <br> <br> <br></p>
 </div>
 </div>
 <div>
@@ -59,7 +60,7 @@ Référence : </p>
   <br>
   <div class="row">
     <div class="col-10"></div>
-    <div class="col-2"><button class="btn btn-secondary">Imprimer <fa name="fas fa-print"></fa></button></div>
+    <div class="col-2"><button class="btn btn-secondary" (click)="imprimer();">Imprimer <fa name="fas fa-print"></fa></button></div>
   </div>
 
 </div>
