--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,12 @@
 @media screen {
+  body{
+    height:1000px;
+    overflow-y: scroll;
+  }
+
   .vertical-menu {
     width: 200px;
   }
-
 
   .lienNoir {
     text-decoration: none;
