--- a/src/app/paiement/paiement.component.html
+++ b/src/app/paiement/paiement.component.html
@@ -1,4 +1,6 @@
 <div class="container" align="center">
+  <br>
   Connexion à Paypal...
-  <fa name="fab fa-cloudscale" animation="spin"></fa>
+  <br>
+  <fa name="fas fa-plus-circle" animation="spin" size="10"></fa>
 </div>
