--- a/src/app/detailhydromel/detailhydromel.component.html
+++ b/src/app/detailhydromel/detailhydromel.component.html
@@ -1,13 +1,52 @@
-<h1>Hydromel 1</h1>
-<div>
-<p>
-  <label>Nom de l'hydromel : {{find(1).nom}}</label><br>
-  <label>Type d'hydromel</label><br>
-  <label> Type de miel</label><br>
-  <label>Volume</label><br>
-  <label>Degré</label><br>
-  <label>Date de mise en bouteille</label><br>
-  <label>Prix</label><br>
-  <label>Bouteilles disponibles</label><br>
-</p>
-</div>
+<div class="container">
+  <div class="card-group">
+
+    <div class="card" style="text-align=right; color:white; border-color: #f4a60e;background-color:#f4a60e; margin-top: 30px ">
+      <div style="border-color: white;">
+
+        <label><h4>{{hydromel?.nom}}</h4></label><br>
+        <label><h5>{{hydromel?.typeHydromel}}</h5></label><br>
+        <label><h5>Type de miel : {{hydromel?.typeMiel}}</h5></label><br>
+        <label><h5>{{hydromel?.volume}} cL</h5></label><br>
+        <label><h5>{{hydromel?.degreAlcool}}°</h5></label><br>
+        <div *ngIf="hydromel?.qte>1 else bouteille2">
+          <h5>{{hydromel?.qte}} bouteilles disponibles</h5></div>
+        <br>
+        <ng-template #bouteille2><h5>{{hydromel?.qte}} bouteille disponible</h5></ng-template>
+        <label><h5>{{hydromel?.prix}}€</h5></label><br>
+        <label><h5>Description</h5></label><br>
+        <label><h6>{{hydromel?.detail}}</h6></label><br>
+        <label><h5>Vous souhaitez en acheter ?</h5></label>
+        <p class="card-text" style="text-align:center">Quantité: <input id="qte" type="number" style="padding: 2px" [(ngModel)]="qte"><button class="btn" style="background-color:#f4a60e" (click)="createLigne(hydromel,qte)">
+          <fa name="fas fa-shopping-basket"></fa>
+        </button></p>
+      </div>
+    </div>
+    <div class="card " style="border-style: none">
+      <div class="card-body text-center">
+        <img class="card-img" src="{{hydromel?.photoURL}}" alt="Hydromel image" style="width:75%">
+      </div>
+    </div>
+
+  </div>
+  <div class='card' style="text-align:left; color:black; margin-top: 30px;border-color: white">
+   <div class='card' style="text-align:left; color:white;border-color:#f4a60e;background-color: #f4a60e">
+     <h2>Avis</h2></div>
+    <tr *ngFor="let avis of listeAvis">
+      <div class='card' style="text-align:left; color:black;border-color:lightgrey; margin-top: 20px">
+      <h3>Note: {{avis.note}}/5 </h3>
+        <p tyle="text-align:left">{{avis.avis}} </p></div>
+      </div>
+
+
+  </div>
+
+
+
+
+
+
+
+
+
+
