--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,10 @@
     width: 200px;
   }
 
-
+  body{
+    height:1000px;
+    overflow-y: scroll;
+  }
   .lienNoir {
     text-decoration: none;
     color: black;
